Added execution script csv-sql-converter Added .tar.gz packaging via assembly maven plugin.